<resources>

    <string-array name="area_array">
        <item>Office Plant</item>
        <item>Produksi Basic Care</item>
        <item>Produksi High Care</item>
        <item>Preparasi Basic Care</item>
        <item>Preparasi High Care</item>
        <item>Engineering Maintenace</item>
    </string-array>

    <string-array name="div_array">
        <item>Plant</item>
        <item>KN</item>
    </string-array>

    <string-array name="plant_array">
        <item>MNF MANUFACTURING GENERAL</item>
        <item>MNF PLANT SHP INDIRECT</item>
        <item>MNF PLANT SHP DIRECT</item>
        <item>MNF QA PLANT</item>
        <item>MNF PREPARATION PLANT</item>
        <item>MNF PLANT SHP MAINTENANCE</item>
        <item>MNF KN GENERAL AFFAIR</item>
        <item>MNF KN HRD</item>
        <item>All Dept</item>
    </string-array>

    <string-array name="kn_array">
        <item>MS</item>
        <item>IT</item>
    </string-array>

    <string name="app_name" translatable="false">SHP - AMS</string>
    <string name="ams_name" translatable="false">Asset Management System</string>
    <string name="lbl_edit_asset_title">Edit Asset</string>
    <string name="hint_enter_rfid_tag">RFID Tag Number</string>
    <string name="action_search">Search</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">© VBN 2020 - 2021</string>
    <string name="nav_header_subtitle" translatable="false">nandang.duryat@kalbenutritionals.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="assets_list">Assets List</string>
    <string name="action_sort_show_all">Show All Assets</string>
    <string name="action_export_csv">Export To Excel</string>
    <string name="choose_division">Choose Division</string>
    <string name="choose_dept">Choose Department</string>

    <!-- Version Preferences -->
    <string name="action_settings">Settings</string>
    <string name="menu_title_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="version_title">Version</string>
    <string name="menu_send">Send</string>
    <string name="version_summary" translatable="false">1.0.0</string>
    <string name="build_title" translatable="false">Build</string>
    <string name="update_summary">Tap here to check for updates</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>

    <!-- Feedback Preferences -->
    <string name="feedback_title">Feedback</string>
    <string name="pattern_mailbody">\n\n-----------------------------\nPlease do not delete this section\nDevice OS: Android\nDevice OS version: {0}\nApp Version: {1} build {5}\nDevice Brand: {2}\nDevice Model: {3}\nDevice Manufacturer: {4}</string>
    <string name="feedback_body">Feedback for</string>
    <string name="choose_email_client">Choose mailing client</string>

    <!-- Preference Titles -->
    <string name="about_title">About</string>
    <string name="update_header">Update</string>
    <string name="help_header">Help</string>

    <!-- About Preferences -->
    <string name="about_summary">Asset Management System - AMS is an app for asset inventory or stock opname using RFID.\nDeveloped by NDU - System Control Plant\nVBN Future Industrial Technology.</string>

    <!-- Update Preferences -->
    <string name="update_title">Check for update</string>
    <string name="total_asset" translatable="false">Total Asset</string>
    <string name="units" translatable="false">Units</string>
    <string name="asset_readable">Readable</string>
    <string name="asset_unreadable">Unreadable</string>
    <string name="asset_result">Result</string>
    <string name="percentage" translatable="false">%</string>
    <string name="asset_empty">No Asset</string>
    <string name="copyright_title">Copyright</string>
    <string name="action_refresh_assets">Refresh Asset List</string>
    <string name="file_export_location_header" translatable="false">File</string>
    <string name="file_export_location_title">Export Location</string>
    <string name="file_export_location_sum">Internal Storage</string>
    <string name="export_result_title">Will export all result to .csv and .xls file</string>
    <string name="export_result_message">Export Result To Excel</string>
    <string name="button_yes">Yes</string>
    <string name="button_cancel">Cancel</string>
    <string name="loading_exporting_database">Exporting database…</string>
    <string name="action_export_pdf">Export To PDF</string>
    <string name="action_mailto">Send result by e-mail</string>
    <string name="lbl_reg_asset_title">Asset Registration</string>
    <string name="rfid_empty_error_message">RFID Tag Number Can\'t Be Empty</string>
    <string name="email_empty_error_message">Email Address Can\'t Be Empty</string>
    <string name="asset_detail">Asset Detail</string>
    <string name="remove_rfid_tag">Remove RFID Tag</string>
    <string name="choose_area">Choose Area</string>
    <string name="last_scan_time">Last Scan Time</string>
    <string name="hint_nama_pengguna">User Name</string>
    <string name="hint_enter_email">Mail Destination</string>
    <string name="hint_fixed_asset_code">Fixed Asset Code</string>
    <string name="hint_rfid">RFID Tag</string>
    <string name="hint_nama_asset">Asset Description</string>
    <string name="hint_asset_location_by_system">Asset Location By System</string>
    <string name="hint_asset_status">Asset Status</string>
    <string name="hint_asset_area">Asset Area</string>
    <string name="hint_asset_category">Asset Category</string>
    <string name="hint_asset_supervisorid">Asset Supervisor ID</string>
    <string name="hint_asset_pic_name">PIC Name</string>
    <string name="hint_asset_pic_email">PIC E-mail</string>
    <string name="hint_asset_pic_user">Asset User</string>
    <string name="hint_asset_lob">LOB User</string>
    <string name="hint_asset_img">Asset Image</string>
    <string name="hint_notes">Asset Notes</string>
    <string name="hint_asset_acquisition">Asset Acquisition</string>
    <string name="asset_with_rfid_tag">Asset With RFID Tag</string>
    <string name="scanned_asset">Scanned Asset</string>
    <string name="percentage_text">Percentage</string>
    <string name="storage_granted">Storage Granted</string>
    <string name="storage_denied">Storage Denied</string>
    <string name="btn_update">Update</string>
    <string name="btn_asset_map" translatable="false">Asset Map</string>
    <string name="btn_start_ams" translatable="false">Start AMS</string>
    <string name="importing_data_asset">Importing data asset…</string>
    <string name="msg_canceled">Canceled!</string>
    <string name="msg_asset_no_tag">This asset doesn\'t have tag yet</string>
    <string name="msg_asset_tag_removed">Tag was removed from</string>
    <string name="msg_please_wait">Please wait!</string>
    <string name="msg_import_complete">Import complete!</string>
    <string name="msg_no_asset_xml_in_directory">No Asset.xml file in the directory</string>
    <string name="msg_import_failed">Import failed!</string>
    <string name="msg_asset_tag_delete">This will remove tag from Asset</string>
    <string name="msg_tag_pic_updated">Tag and PIC has been updated</string>
    <string name="msg_tag_in_use">Tag is used for another asset</string>
    <string name="msg_pic_updated">PIC has been updated</string>
    <string name="msg_choose_option">Choose Option</string>
    <string name="msg_edit_tag">Edit Tag</string>
    <string name="msg_remove_tag">Remove Tag</string>
    <string name="msg_take_a_while_please_wait">It will take a while, Please wait!</string>
    <string name="msg_exporting_to_excel">Exporting to Excel…</string>
    <string name="msg_file_build_success">File %s.xls is built!</string>
    <string name="msg_file_build_fail">File fail to build!</string>
    <string name="msg_exporting_database">Exporting database…</string>
    <string name="msg_export_success">Export successful</string>
    <string name="msg_export_failed">Export failed</string>
    <string name="msg_send_mail_using">Send email using:</string>
    <string name="msg_preparing_asset">Preparing asset, Please wait!</string>
    <string name="msg_export_to_pdf">Export Asset To .pdf</string>
    <string name="msg_exporting_asset_to">Exporting %d Assets to .pdf</string>
    <string name="msg_export_complete">Export complete</string>
    <string name="msg_no_asset">No Asset file in the database</string>
    <string name="msg_refresh_notice">This will refresh asset list and all unimported scan data will be lost!</string>
    <string name="database_title">Database Version</string>
    <string name="scan_config_header">Scan Configuration</string>
    <string name="database_summary">Adjustments to the database and the .xml file format used</string>
    <string name="hint_unit_sistem">Unit System</string>
    <string name="hint_tanggal_beli">Buy Date</string>
    <string name="hint_buy_value">Price</string>
    <string name="hint_unit_actual">Unit Actual</string>
    <string name="hint_unit_selisih">Unit Gap</string>
    <string name="hint_dept_lob" translatable="false">Department LOB</string>
    <string name="hint_dept_lob_update" translatable="false">Department LOB Update</string>
    <string name="hint_nama_pengguna_update">User Name Update</string>
    <string name="hint_nama_penanggung_jawab">Responsibility</string>
    <string name="hint_nama_penanggung_jawab_update">Responsibility Update</string>
    <string name="hint_image_link">Image Link</string>
    <string name="hint_lokasi_update">Location Update</string>
    <string name="action_sort_by_scanned">Scanned Asset</string>
    <string name="action_sort_by_unscanned">Unscanned Asset</string>
    <string name="scan_result_summary">Asset condition, based on the result of asset taking</string>
    <string name="scan_result_title">Scan Result Indicator</string>
    <string name="img_desc_logo_kalbe" translatable="false">Logo Kalbe Nutritionals</string>
    <string name="img_desc_logo_vbn" translatable="false">Logo VBN</string>
    <string name="txt_registered" translatable="false">Registered: 50</string>
    <string name="txt_scanned" translatable="false">Scanned: 25</string>
    <string name="txt_percentage" translatable="false">Presentase: 100%</string>
</resources>