<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScanAssetActivity"
    tools:showIn="@layout/activity_scan_asset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/empty_assets_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top_no_notes"
            android:fontFamily="sans-serif-light"
            android:text="@string/asset_empty"
            android:textSize="@dimen/msg_no_notes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_registered_asset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/nav_header_vertical_spacing"
            android:layout_marginEnd="@dimen/nav_header_vertical_spacing"
            android:text="@string/txt_registered" />

        <TextView
            android:id="@+id/text_scanned_asset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/nav_header_vertical_spacing"
            android:layout_marginEnd="@dimen/nav_header_vertical_spacing"
            android:text="@string/txt_scanned" />

        <TextView
            android:id="@+id/text_precentage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/nav_header_vertical_spacing"
            android:layout_marginEnd="@dimen/nav_header_vertical_spacing"
            android:text="@string/txt_percentage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:gravity="top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_asset_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="@color/design_default_color_secondary"
                android:text="@string/btn_asset_map"
                android:textColor="@color/design_default_color_background"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/asset_result"
                android:textColor="@color/design_default_color_background"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>